--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eece748c",
+   "id": "5d187c82",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "72744129",
+   "id": "70e60017",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0288a831",
+   "id": "4a6e2cf9",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27871ca2",
+   "id": "3df1483e",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c09177e9",
+   "id": "bf2fd05d",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b5f70e",
+   "id": "102b227b",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f210b88d",
+   "id": "904623b9",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a7dcceb",
+   "id": "193745e5",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "22de931c",
+   "id": "37688c31",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a8ebaf4c",
+   "id": "b21731dd",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a176c9d",
+   "id": "15b35e9d",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2b1ff4d6",
+   "id": "8c429687",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1a1ff415",
+   "id": "710791c0",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6dd7be6a",
+   "id": "5ea9bb7f",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61fc1c96",
+   "id": "ef4c1507",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4691d9c0",
+   "id": "bf528fd0",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d05d17",
+   "id": "4ecf005b",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5e19b9e9",
+   "id": "ea45c234",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "526f9a67",
+   "id": "7db8465e",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd36daf8",
+   "id": "a16fc176",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fad48e80",
+   "id": "b49f92e4",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b7827728",
+   "id": "63d25bf8",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a4aa0dd6",
+   "id": "070b28c5",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "88c3d3d7",
+   "id": "70aadd32",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bdd3214",
+   "id": "438ed399",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5b82cda7",
+   "id": "bdf5f752",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710818c7",
+   "id": "3005586b",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "094a139d",
+   "id": "4ccc36fa",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96af1525",
+   "id": "4e510704",
    "metadata": {},
    "source": [
     "# Getting input from the user\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "662b2e53",
+   "id": "22bc362b",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f1422e61",
+   "id": "37dce19e",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "75683541",
+   "id": "fa52f87c",
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9268e448",
+   "id": "0627c4ca",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5365e544",
+   "id": "908d6dad",
    "metadata": {},
    "source": [
     "# Exercise: Multi-part greeting\n",
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "698e4e51",
+   "id": "8e009c8e",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad5751fe",
+   "id": "db0d15fe",
    "metadata": {},
    "source": [
     "# f-strings\n",
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "e1f2cef5",
+   "id": "89d52534",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "77cfebed",
+   "id": "22a136ee",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afc3ea62",
+   "id": "800c2357",
    "metadata": {},
    "source": [
     "# Comparing values\n",
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7f0512fc",
+   "id": "af823507",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9f19b9b2",
+   "id": "d19e2477",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "06f547a7",
+   "id": "705e300f",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f44ec4db",
+   "id": "52919e22",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0eeff900",
+   "id": "056c1af0",
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "504001d3",
+   "id": "a70b4c0e",
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "732104fa",
+   "id": "81b60efe",
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "bf2ccecf",
+   "id": "c02a5ab9",
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23b9b138",
+   "id": "b104da5b",
    "metadata": {},
    "source": [
     "# Comparison operators\n",
@@ -994,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e738dae2",
+   "id": "88cd2726",
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "5b156908",
+   "id": "d8322e23",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fa48e893",
+   "id": "a08651f2",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d502cbed",
+   "id": "21f97411",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "6b0730be",
+   "id": "589d3c88",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ae6a4c1",
+   "id": "9bf3cca4",
    "metadata": {},
    "source": [
     "# Conditional execution\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0581911d",
+   "id": "418b9f59",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362a0308",
+   "id": "393f7cb3",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e31f7fe7",
+   "id": "ff12ce8e",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first?\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bc79f9d7",
+   "id": "7fc4f461",
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "329d23cf",
+   "id": "372973f9",
    "metadata": {},
    "source": [
     "# More sophisticated comparisons\n",
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "680d8163",
+   "id": "a839a11b",
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9115ba04",
+   "id": "783e2d3f",
    "metadata": {},
    "source": [
     "# Exercise: Which word comes first? \n",
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe05c35c",
+   "id": "339a8ae0",
    "metadata": {},
    "source": [
     "Example:\n",
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "e1d14ad7",
+   "id": "496b8f3d",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "af3e58d3",
+   "id": "3a890987",
    "metadata": {},
    "outputs": [
     {
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efeb62b6",
+   "id": "8a62b0ee",
    "metadata": {},
    "source": [
     "# Combining conditions\n",
@@ -1353,7 +1353,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8b468088",
+   "id": "741f2939",
    "metadata": {},
    "outputs": [
     {
@@ -1380,7 +1380,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f8f849c8",
+   "id": "e0b5e8f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "82c9f914",
+   "id": "4b1638b2",
    "metadata": {},
    "outputs": [
     {
@@ -1417,7 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "9cf0747c",
+   "id": "efab6a12",
    "metadata": {},
    "outputs": [
     {
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "85c07800",
+   "id": "513a4bb2",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df237cca",
+   "id": "e38ed3c1",
    "metadata": {},
    "source": [
     "# Exercise: Name and company\n",
@@ -1492,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "d6748800",
+   "id": "12e57c8d",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "66bf7c05",
+   "id": "a64f1b04",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "88f8a2b0",
+   "id": "92648e40",
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee42e08",
+   "id": "03fa9615",
    "metadata": {},
    "source": [
     "# The `not` logical operator\n",
@@ -1604,7 +1604,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "64aabfb1",
+   "id": "c92862ea",
    "metadata": {},
    "outputs": [
     {
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "1f6f0b2d",
+   "id": "c5188be8",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15a6d692",
+   "id": "fa6aaf2e",
    "metadata": {},
    "source": [
     "# Numbers\n",
@@ -1662,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "7607547d",
+   "id": "1bcfa498",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "e709d774",
+   "id": "67357efa",
    "metadata": {},
    "outputs": [
     {
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3a0f954d",
+   "id": "56934f01",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5e516ea4",
+   "id": "8e258a6c",
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "fe55273a",
+   "id": "f6033932",
    "metadata": {},
    "outputs": [
     {
@@ -1773,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "0930fd62",
+   "id": "2a7de27a",
    "metadata": {},
    "outputs": [
     {
@@ -1794,7 +1794,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "3a14503a",
+   "id": "de054e22",
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "a1e4802b",
+   "id": "625d22cd",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1836,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "4cbdaa4c",
+   "id": "6a851f3d",
    "metadata": {},
    "outputs": [
     {
@@ -1857,7 +1857,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "77cbd62b",
+   "id": "1d7bc9a5",
    "metadata": {},
    "outputs": [
     {
@@ -1878,7 +1878,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "eec95af9",
+   "id": "5258c44c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "0f73efa4",
+   "id": "38e288fe",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1915,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "a5c2efdf",
+   "id": "b412ebd0",
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "9d0a4575",
+   "id": "93faaf20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1953,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "c5e00aa5",
+   "id": "7150edc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "b675bd86",
+   "id": "2d87814d",
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "c58b4031",
+   "id": "a5c31791",
    "metadata": {},
    "outputs": [
     {
@@ -2014,7 +2014,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "0747360a",
+   "id": "3cd3024d",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d28d50f1",
+   "id": "42f3ec93",
    "metadata": {},
    "outputs": [
     {
@@ -2058,9 +2058,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "737017a8",
+   "metadata": {},
+   "source": [
+    "# Exercise: Guessing game\n",
+    "\n",
+    "1. Choose an integer, and assign it to `number`.\n",
+    "2. If you want to give the user a hint, you can print the number, too.\n",
+    "3. Ask the user to guess the number.\n",
+    "4. Print one of:\n",
+    "    - You got it!\n",
+    "    - Too low!\n",
+    "    - Too high!\n",
+    "5. That's it -- no more guesses    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc1f42fc",
+   "id": "f1d9a648",
    "metadata": {},
    "outputs": [],
    "source": []
