--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45e29dc5",
+   "id": "2e461358",
    "metadata": {},
    "source": [
     "# new exercise\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dc0459a6",
+   "id": "098d0cee",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "908f5595",
+   "id": "6eaaa167",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0c9e9a2c",
+   "id": "dd393a72",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b576b661",
+   "id": "45c40372",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "20404148",
+   "id": "f2fb9481",
    "metadata": {
     "scrolled": true
    },
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ca55b425",
+   "id": "d422894f",
    "metadata": {},
    "outputs": [
     {
@@ -223,10 +223,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea9047d",
+   "id": "6b66f294",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "number = 50\n",
+    "print(number ' Ops! a hint')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
