--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4bd38e3",
+   "id": "91de2c8c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e5d0bdf5",
+   "id": "7c52a52b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ac1dfc",
+   "id": "71f451c8",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095a8227",
+   "id": "e01e9c96",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cc5be980",
+   "id": "1f68e26d",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "61c527ab",
+   "id": "eb2a78d7",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2c15cb67",
+   "id": "d2e9d212",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "919925e0",
+   "id": "70c4debd",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "73a28ffc",
+   "id": "586bb525",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8909c641",
+   "id": "47eccb2d",
    "metadata": {
     "scrolled": false
    },
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "94c7369e",
+   "id": "4fce84d8",
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7801a34a",
+   "id": "ca30a80f",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "785f8bbe",
+   "id": "07ea9101",
    "metadata": {},
    "outputs": [
     {
@@ -280,10 +280,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f9cf658",
+   "id": "70091bcc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "num = 5\n",
+    "print\n",
+    "x = input('')\n"
+   ]
   }
  ],
  "metadata": {
